<resources>
    <string name="app_name">Vitrine</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="logout_text">Logout</string>
    <string name="title_activity_edit_friends">Edit Friends</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="send">Send</string>
    <string name="title_activity_view_image">Vitrine</string>
    <string name="content_desc_logo">Vitrine V Background Image</string>
    <string name="subtitle">O mundo da moda na palma da sua mão</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="label_login_button">SIGN IN</string>
    <string name="label_signup_button">SIGN UP</string>
    <string name="sign_up_cta">Don\'t have an account? Sign up!</string>
    <string name="email">Email</string>
    <string name="label_cancel_button">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>

</resources>
