<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context="com.raphaelgmelo.ribbit.SignUpActivity">

    <include layout="@layout/auth_common"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username"
            style="@style/AuthEditText">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/AuthEditText"/>

        <EditText
            android:id="@+id/emailField"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            style="@style/AuthEditText"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        android:text="@string/label_signup_button"
        android:id="@+id/signUpButton"
        style="@style/AuthButton"
        android:layout_marginRight="0dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"/>

    <Button
        android:text="@string/label_cancel_button"
        android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:layout_marginLeft="0dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"/>

</RelativeLayout>
